header text spacing fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -86,6 +86,7 @@
       align-self: flex-start;
       text-align: left;
       width: 50%;
+      margin-bottom: 146px;
     }
 
     @include on-desktop {
